[package]
name = "tuber"
version = "0.4.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
crc32fast = "1"
libc = "0.2"
tikv-jemallocator = "0.6.1"

[dev-dependencies]
tempfile = "3"

[[bench]]
name = "throughput"
harness = false
